# cartridge-rs

./: .gitignore  BENCHMARK_DATA_FORMAT.md  BENCHMARK_STATUS.md  CARTRIDGE_SPECIFICATION.md  CLAUDE.md  Cargo.toml  DYNAMIC_PLAN.md  FEATURES_V0.2.0.md  LIBRARY_USAGE.md  PLAN_VIEW_MODEL.md  PLAN_VIEW_MODEL_COMPLETE.md  PLAN_WAL_AND_VACUUM.md  README.md  TESTING_PLAN.md  TESTING_STATUS.md  TODO.md  cartridge.md  test_autogrow.rs
.claude/: settings.local.json
benches/: allocation.rs  auto_growth_performance.rs  buffer_pool.rs  comprehensive.rs  iam_policy.rs  mixed_workload.rs  pager_arc.rs  snapshots.rs  vfs_sqlite.rs
crates/cartridge-core/: CARTRIDGE_EXECUTIVE_SUMMARY.md  Cargo.toml  README.md
crates/cartridge-core/benches/: buffer_pool.rs  pager_arc.rs  vfs_sqlite.rs
crates/cartridge-core/examples/: basic_usage.rs  library_dependency.rs  simple_usage.rs
crates/cartridge-core/src/: buffer_pool.rs  cartridge.rs  compression.rs  encryption.rs  engram_integration.rs  error.rs  integration_tests.rs  io.rs  lib.rs  validation.rs
crates/cartridge-core/src/allocator/: bitmap.rs  extent.rs  hybrid.rs
crates/cartridge-core/src/catalog/: btree.rs  metadata.rs
crates/cartridge-core/src/iam/: engine.rs
crates/cartridge-core/src/snapshot/: mod.rs
crates/cartridge-core/src/vfs/: file.rs  tests.rs  vfs.rs
crates/cartridge-rs/: Cargo.toml  README.md
crates/cartridge-rs/src/: lib.rs
crates/cartridge-rs/src/core/: buffer_pool.rs  compression.rs  engram_integration.rs  integration_tests.rs  manifest.rs  mod.rs
crates/cartridge-rs/src/core/audit/: mod.rs  ring_buffer.rs
crates/cartridge-rs/src/core/catalog/: mod.rs
crates/cartridge-rs/src/core/iam/: cache.rs
crates/cartridge-rs/src/core/vfs/: tests.rs  vfs.rs
crates/cartridge-s3/: Cargo.toml
crates/cartridge-s3/src/: acl.rs  backend.rs  lib.rs  s3_impl.rs  sse.rs  utils.rs
crates/cartridge-s3/tests/: fuses_integration.rs  multipart_integration.rs
docs/: ARCHITECTURE.md  CARTRIDGE_S3_0.2_PLAN.md  CARTRIDGE_S3_README.md  CART_SPECIFICATION.md  PERFORMANCE_VERIFICATION.md  PLAN_CARTRIDGE_IMPLEMENTATION.md  S3_PLAN.md  S3_STATUS.md  SPECIFICATION.md  performance.md
examples/: auto_growth.rs  basic.rs  compression_analysis.rs  debug_growth.rs  extract_db.rs  list_cart.rs  manifest.rs  test_1mb.rs  test_two_large.rs  test_two_large_files.rs  trace_allocations.rs  vfs_trait.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_vfs_concurrent.rs  fuzz_vfs_open.rs  fuzz_vfs_read_write.rs
src/: backend.rs  error.rs  lib.rs  multipart.rs  s3_impl.rs  versioning.rs
src/core/: cartridge.rs  encryption.rs  engram_integration.rs  error.rs  header.rs  integration_tests.rs  io.rs  manifest.rs  mod.rs  page.rs  validation.rs  wal.rs
src/core/allocator/: bitmap.rs  extent.rs  hybrid.rs  mod.rs
src/core/catalog/: btree.rs  metadata.rs  mod.rs
src/core/iam/: condition.rs  mod.rs  pattern.rs  policy.rs  tests.rs
src/core/snapshot/: mod.rs
src/core/vfs/: mod.rs  tests.rs  vfs.rs
tests/: audit_log_integrity.rs  auto_growth_tests.rs  buffer_pool_coherency.rs  concurrency_stress.rs  concurrency_vfs_multi_connection.rs  copy_delete_integration.rs  corruption_allocators.rs  corruption_btree.rs  corruption_pages.rs  crash_recovery_growth.rs  engram_freeze_validation.rs  fuses_integration.rs  iam_policy_race_conditions.rs  memory_safety.rs  multipart_integration.rs  property_allocator.proptest-regressions  property_allocator.rs  security_encryption.rs  security_iam_bypass.rs  snapshot_advanced.rs  snapshot_consistency.rs  stress_extreme_scale.rs  vfs_ffi_integration.rs  vfs_stress.rs
