[workspace]
resolver = "2"
members = [
    "crates/cartridge-core",
    "crates/cartridge-rs",
    "crates/cartridge-s3",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/manifest-humanity/cartridge"
homepage = "https://github.com/manifest-humanity/cartridge"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
