[package]
name = "cartridge-rs"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blackfall-labs/cartridge"
description = "High-performance mutable archive format with SQLite VFS support"
readme = "README.md"
keywords = ["archive", "storage", "sqlite", "vfs", "mutable"]
categories = ["filesystem", "database", "compression"]
documentation = "https://docs.rs/cartridge-rs"
homepage = "https://github.com/blackfall-labs/cartridge"

[dependencies]
# Engram integration (reuse existing crypto/compression)
engram-rs = "1.0.0"

# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"

# Validation
semver = { version = "1.0", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }

# Hashing (xxhash for path hashing, sha2 for checksums)
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ahash = "0.8"
sha2 = "0.10"
crc32fast = "1.4"

# Caching
lru = "0.12"

# Concurrency
crossbeam = "0.8"
parking_lot = "0.12"

# Regex for IAM wildcard patterns
regex = "1.10"

# Time utilities (for engram timestamps)
chrono = "0.4"

# Compression (LZ4 and Zstd for content pages)
lz4_flex = "0.11"
zstd = "0.13"

# Encryption (AES-256-GCM for sensitive data)
aes-gcm = "0.10"
rand = "0.8"

# SQLite (rusqlite for high-level API, libsqlite3-sys for VFS FFI)
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
libc = "0.2"

# I/O
memmap2 = "0.9"
tokio = { version = "1.35", features = ["full"], optional = true }

# Logging
tracing = "0.1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.12"
rand = "0.8"

[features]
default = []
async = ["tokio"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
