[package]
name = "cartridge-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
cartridge-rs = { path = ".." }
libfuzzer-sys = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
parking_lot = "0.12"
arbitrary = { version = "1.3", features = ["derive"] }

[[bin]]
name = "fuzz_vfs_open"
path = "fuzz_targets/fuzz_vfs_open.rs"
test = false
doc = false

[[bin]]
name = "fuzz_vfs_read_write"
path = "fuzz_targets/fuzz_vfs_read_write.rs"
test = false
doc = false

[[bin]]
name = "fuzz_vfs_concurrent"
path = "fuzz_targets/fuzz_vfs_concurrent.rs"
test = false
doc = false
